more spec coverage

--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -60,7 +60,7 @@
 															      <td><%= button_to 'view', calculation_path(calculation), method: :get, class: 'btn-viewing' %></td>
 																		<% if calculation.user == current_user %>
 																		<td><%= button_to 'edit', edit_calculation_path(calculation), method: :get, class: 'btn-viewing' %></td>
-																		<td><%= button_to 'delete', calculation, method: :delete, class: 'btn-viewing' %></td>
+																		<td><%= button_to 'delete', calculation_path(calculation), method: :delete, class: 'btn-viewing' %></td>
 																		<% end %>
 															    </tr>
 															  </tbody>
